@@ -1,1 +1,0 @@
-= MORC Trail Conditions Android Application
