@@ -9,6 +9,7 @@ import cash.andrew.kotlin.common.doOnSuccess
 import cash.andrew.kotlin.common.flatMapFailure
 import cash.andrew.kotlin.common.map
 import cash.andrew.mntrailconditions.R
+import cash.andrew.mntrailconditions.data.api.AggregatedTrailsRepository
 import cash.andrew.mntrailconditions.data.preference.Preference
 import cash.andrew.mntrailconditions.databinding.TrailListViewBinding
 import cash.andrew.mntrailconditions.util.component
@@ -23,9 +24,17 @@ class TrailListView(
   attrs: AttributeSet
 ) : LinearLayout(context, attrs), CoroutineScope by MainScope() {
 
-  @Inject lateinit var htmlMorcTrailRepository: HtmlMorcTrailRepository
-  @Inject lateinit var trailListAdapter: TrailListAdapter
-  @Inject lateinit var morcTrailRepository: MorcTrailRepository
+  @Inject
+  lateinit var htmlMorcTrailRepository: HtmlMorcTrailRepository
+
+  @Inject
+  lateinit var trailListAdapter: TrailListAdapter
+
+  @Inject
+  lateinit var morcTrailRepository: MorcTrailRepository
+
+  @Inject
+  lateinit var trailsRepository: AggregatedTrailsRepository
 
   private val recyclerView get() = binding.trailListRecyclerView
   private val refreshLayout get() = binding.trailListContent
@@ -67,35 +76,28 @@ class TrailListView(
 
   private fun loadData() {
     Timber.d("loadData() called")
-
     launch(Dispatchers.IO) {
-      morcTrailRepository.getTrails().map { trails ->
-        val filtered = if (favoriteTrailsPref == null) trails
-        else trails.filter { trail -> trail.trailName in requireNotNull(favoriteTrailsPref).get() }
-        filtered.map { it.toViewModel() }.sortedBy { it.name }
-      }.flatMapFailure { error ->
-        Timber.e(error, "Error loading trails from morc trails")
-
-        htmlMorcTrailRepository.getTrails().map { trails ->
+      trailsRepository.getTrails().map { trails ->
           val filtered = if (favoriteTrailsPref == null) trails
           else trails.filter { trail -> trail.name in requireNotNull(favoriteTrailsPref).get() }
           filtered.map { it.toViewModel() }.sortedBy { it.name }
-        }.doOnFailure {
-          Timber.e(it, "Error loading trails from heroku")
+        }
+        .doOnFailure {
+          Timber.e(it, "Error loading trails from trail aggregator")
           launch(Dispatchers.Main) {
             animator.displayedChildId = R.id.trail_list_error
           }
         }
-      }.doOnSuccess { viewModels ->
-        launch(Dispatchers.Main) {
-          if (favoriteTrailsPref != null && viewModels.isEmpty()) {
-            animator.displayedChildId = R.id.trail_list_no_favorites_text
-          } else {
-            trailListAdapter.trails = viewModels
-            animator.displayedChildId = R.id.trail_list_recycler_view
+        .doOnSuccess { viewModels ->
+          launch(Dispatchers.Main) {
+            if (favoriteTrailsPref != null && viewModels.isEmpty()) {
+              animator.displayedChildId = R.id.trail_list_no_favorites_text
+            } else {
+              trailListAdapter.trails = viewModels
+              animator.displayedChildId = R.id.trail_list_recycler_view
+            }
           }
         }
-      }
 
       launch(Dispatchers.Main) {
         refreshLayout.isRefreshing = false
