@@ -1,7 +1,8 @@
 package cash.andrew.mntrailconditions.data
 
+import cash.andrew.mntrailconditions.data.api.ApiModule
 import cash.andrew.mntrailconditions.data.api.ProdApiModule
 import dagger.Module
 
-@Module(includes = [ProdApiModule::class])
+@Module(includes = [ApiModule::class, ProdApiModule::class])
 object ProdDataModule
